src/OpenCvSharpExtern/features2d_Feature2D.h

CVAPI(ExceptionStatus) features2d_MSER_setMaxArea(cv::MSER *obj, int maxArea)
{
    BEGIN_WRAP
    obj->setMaxArea(maxArea);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_MSER_getMaxArea(cv::MSER *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getMaxArea();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_MSER_setPass2Only(cv::MSER *obj, int f)
{
    BEGIN_WRAP
    obj->setPass2Only(f != 0);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_MSER_getPass2Only(cv::MSER *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getPass2Only() ? 1 : 0;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_FAST1(cv::_InputArray *image, std::vector<cv::KeyPoint> *keypoints, int threshold, int nonmaxSupression)
{
    BEGIN_WRAP
    cv::FAST(*image, *keypoints, threshold, nonmaxSupression != 0);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_FAST2(cv::_InputArray *image, std::vector<cv::KeyPoint> *keypoints, int threshold, int nonmaxSupression, int type)
{
    BEGIN_WRAP
    cv::FAST(*image, *keypoints, threshold, nonmaxSupression != 0, static_cast<cv::FastFeatureDetector::DetectorType>(type));
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_FastFeatureDetector_create(
    int threshold, int nonmaxSuppression, cv::Ptr<cv::FastFeatureDetector> **returnValue)
{
    BEGIN_WRAP
    const auto ptr = cv::FastFeatureDetector::create(threshold, nonmaxSuppression != 0);
    *returnValue = clone(ptr);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_Ptr_FastFeatureDetector_delete(cv::Ptr<cv::FastFeatureDetector> *ptr)
{
    BEGIN_WRAP
    delete ptr;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_FastFeatureDetector_setThreshold(cv::FastFeatureDetector *obj, int threshold)
{
    BEGIN_WRAP
    obj->setThreshold(threshold);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_FastFeatureDetector_getThreshold(cv::FastFeatureDetector *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getThreshold();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_FastFeatureDetector_setNonmaxSuppression(cv::FastFeatureDetector *obj, int f)
{
    BEGIN_WRAP
    obj->setNonmaxSuppression(f != 0);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_FastFeatureDetector_getNonmaxSuppression(cv::FastFeatureDetector *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getNonmaxSuppression() ? 1 : 0;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_FastFeatureDetector_setType(cv::FastFeatureDetector *obj, int type)
{
    BEGIN_WRAP
    obj->setType(static_cast<cv::FastFeatureDetector::DetectorType>(type));
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_FastFeatureDetector_getType(cv::FastFeatureDetector *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = static_cast<int>(obj->getType());
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AGAST(
    cv::_InputArray *image, std::vector<cv::KeyPoint> *keypoints,
    int threshold, int nonmaxSuppression, int type)
{
    BEGIN_WRAP
    cv::xfeatures2d::AGAST(
        entity(image),
        *keypoints,
        threshold,
        nonmaxSuppression != 0, 
        static_cast<cv::xfeatures2d::AgastFeatureDetector::DetectorType>(type));
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AgastFeatureDetector_create(
    int threshold, int nonmaxSuppression, int type, cv::Ptr<cv::xfeatures2d::AgastFeatureDetector> **returnValue)
{
    BEGIN_WRAP
    const auto ptr = cv::xfeatures2d::AgastFeatureDetector::create(
        threshold, nonmaxSuppression != 0, static_cast<cv::xfeatures2d::AgastFeatureDetector::DetectorType>(type));
    *returnValue = clone(ptr);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_Ptr_AgastFeatureDetector_delete(cv::Ptr<cv::xfeatures2d::AgastFeatureDetector> *ptr)
{
    BEGIN_WRAP
    delete ptr;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AgastFeatureDetector_setThreshold(cv::xfeatures2d::AgastFeatureDetector *obj, int val)
{
    BEGIN_WRAP
    obj->setThreshold(val);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AgastFeatureDetector_getThreshold(cv::xfeatures2d::AgastFeatureDetector *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getThreshold();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AgastFeatureDetector_setNonmaxSuppression(cv::xfeatures2d::AgastFeatureDetector *obj, int val)
{
    BEGIN_WRAP
    obj->setNonmaxSuppression(val != 0);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AgastFeatureDetector_getNonmaxSuppression(cv::xfeatures2d::AgastFeatureDetector *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getNonmaxSuppression() ? 1 : 0;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AgastFeatureDetector_setType(cv::xfeatures2d::AgastFeatureDetector *obj, int val)
{
    BEGIN_WRAP
    obj->setType(static_cast<cv::xfeatures2d::AgastFeatureDetector::DetectorType>(val));
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AgastFeatureDetector_getType(cv::xfeatures2d::AgastFeatureDetector *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = static_cast<int>(obj->getType());
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_create(
    int maxCorners, double qualityLevel, double minDistance,
    int blockSize, int useHarrisDetector, double k,
    cv::Ptr<cv::GFTTDetector> **returnValue)
{
    BEGIN_WRAP
    const auto ptr = cv::GFTTDetector::create(
        maxCorners, qualityLevel, minDistance,
        blockSize, useHarrisDetector != 0, k);
    *returnValue = clone(ptr);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_Ptr_GFTTDetector_delete(cv::Ptr<cv::GFTTDetector> *ptr)
{
    BEGIN_WRAP
    delete ptr;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_setMaxFeatures(cv::GFTTDetector *obj, int maxFeatures)
{
    BEGIN_WRAP
    obj->setMaxFeatures(maxFeatures);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_getMaxFeatures(cv::GFTTDetector *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getMaxFeatures();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_setQualityLevel(cv::GFTTDetector *obj, double qlevel)
{
    BEGIN_WRAP
    obj->setQualityLevel(qlevel);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_getQualityLevel(cv::GFTTDetector *obj, double *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getQualityLevel();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_setMinDistance(cv::GFTTDetector *obj, double minDistance)
{
    BEGIN_WRAP
    obj->setMinDistance(minDistance);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_getMinDistance(cv::GFTTDetector *obj, double *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getMinDistance();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_setBlockSize(cv::GFTTDetector *obj, int blockSize)
{
    BEGIN_WRAP
    obj->setBlockSize(blockSize);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_getBlockSize(cv::GFTTDetector *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getBlockSize();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_setHarrisDetector(cv::GFTTDetector *obj, int val)
{
    BEGIN_WRAP
    obj->setHarrisDetector(val != 0);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_getHarrisDetector(cv::GFTTDetector *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getHarrisDetector() ? 1 : 0;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_setK(cv::GFTTDetector *obj, double k)
{
    BEGIN_WRAP
    obj->setK(k);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_GFTTDetector_getK(cv::GFTTDetector *obj, double *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getK();
    END_WRAP
}
struct SimpleBlobDetector_Params
{
    float thresholdStep;
    float minThreshold;
    float maxThreshold;
    uint32_t minRepeatability; // size_t
    float minDistBetweenBlobs;

    int filterByColor;
    uchar blobColor;

    int filterByArea;
    float minArea, maxArea;

    int filterByCircularity;
    float minCircularity, maxCircularity;

    int filterByInertia;
    float minInertiaRatio, maxInertiaRatio;

    int filterByConvexity;
    float minConvexity, maxConvexity;
};
CVAPI(ExceptionStatus) features2d_SimpleBlobDetector_create(
    SimpleBlobDetector_Params *p, cv::Ptr<cv::SimpleBlobDetector> **returnValue)
{
    BEGIN_WRAP
    cv::SimpleBlobDetector::Params p2;
    if (p != nullptr)
    {
        p2.thresholdStep = p->thresholdStep;
        p2.minThreshold = p->minThreshold;
        p2.maxThreshold = p->maxThreshold;
        p2.minRepeatability = static_cast<size_t>(p->minRepeatability);
        p2.minDistBetweenBlobs = p->minDistBetweenBlobs;
        p2.filterByColor = p->filterByColor != 0;
        p2.blobColor = p->blobColor;
        p2.filterByArea = p->filterByArea != 0;
        p2.minArea = p->minArea;
        p2.maxArea = p->maxArea;
        p2.filterByCircularity = p->filterByCircularity != 0;
        p2.minCircularity = p->minCircularity;
        p2.maxCircularity = p->maxCircularity;
        p2.filterByInertia = p->filterByInertia != 0;
        p2.minInertiaRatio = p->minInertiaRatio;
        p2.maxInertiaRatio = p->maxInertiaRatio;
        p2.filterByConvexity = p->filterByConvexity != 0;
        p2.minConvexity = p->minConvexity;
        p2.maxConvexity = p->maxConvexity;
    }
    const auto ptr = cv::SimpleBlobDetector::create(p2);
    *returnValue = clone(ptr);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_Ptr_SimpleBlobDetector_delete(cv::Ptr<cv::SimpleBlobDetector> *ptr)
{
    BEGIN_WRAP
    delete ptr;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_create(
    int extended, int upright, float threshold,
    int nOctaves, int nOctaveLayers, int diffusivity,
    cv::Ptr<cv::xfeatures2d::KAZE> **returnValue)
{
    BEGIN_WRAP
    const auto ptr = cv::xfeatures2d::KAZE::create(
        extended != 0, upright != 0, threshold,
        nOctaves, nOctaveLayers, static_cast<cv::xfeatures2d::KAZE::DiffusivityType>(diffusivity));
    *returnValue = clone(ptr);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_Ptr_KAZE_delete(cv::Ptr<cv::xfeatures2d::KAZE> *ptr)
{
    BEGIN_WRAP
    delete ptr;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_setDiffusivity(cv::xfeatures2d::KAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setDiffusivity(static_cast<cv::xfeatures2d::KAZE::DiffusivityType>(val));
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_getDiffusivity(cv::xfeatures2d::KAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = static_cast<int>(obj->getDiffusivity());
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_setExtended(cv::xfeatures2d::KAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setExtended(val != 0);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_getExtended(cv::xfeatures2d::KAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getExtended() ? 1 : 0;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_setNOctaveLayers(cv::xfeatures2d::KAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setNOctaveLayers(val);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_getNOctaveLayers(cv::xfeatures2d::KAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getNOctaveLayers();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_setNOctaves(cv::xfeatures2d::KAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setNOctaves(val);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_getNOctaves(cv::xfeatures2d::KAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getNOctaves();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_setThreshold(cv::xfeatures2d::KAZE *obj, double val)
{
    BEGIN_WRAP
    obj->setThreshold(val);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_getThreshold(cv::xfeatures2d::KAZE *obj, double *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getThreshold();
    END_WRAP
}